调整 FatFs 的参数，看如何才能使 ROM 塞得下二进制。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -147,16 +147,27 @@ Dma.SPI2_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI2_TX.2.SyncRequestNumber=1
 Dma.SPI2_TX.2.SyncSignalID=NONE
 FATFS.BSP.number=1
-FATFS.IPParameters=_USE_LFN,_CODE_PAGE,_LFN_UNICODE,_FS_LOCK,_FS_EXFAT,_FS_NORTC,_NORTC_YEAR,USE_DMA_CODE_SD,_MAX_SS
+FATFS.IPParameters=_USE_LFN,_CODE_PAGE,_LFN_UNICODE,_FS_LOCK,_FS_EXFAT,_FS_NORTC,_NORTC_YEAR,USE_DMA_CODE_SD,_MAX_SS,_USE_FIND,_USE_EXPAND,_USE_CHMOD,_USE_LABEL,_USE_FORWARD,_FS_RPATH,_NORTC_MON,_NORTC_MDAY,_USE_STRFUNC,_USE_MKFS,_STRF_ENCODE
 FATFS.USE_DMA_CODE_SD=1
 FATFS._CODE_PAGE=936
 FATFS._FS_EXFAT=1
 FATFS._FS_LOCK=0
 FATFS._FS_NORTC=1
+FATFS._FS_RPATH=0
 FATFS._LFN_UNICODE=1
 FATFS._MAX_SS=4096
+FATFS._NORTC_MDAY=16
+FATFS._NORTC_MON=12
 FATFS._NORTC_YEAR=2025
+FATFS._STRF_ENCODE=1
+FATFS._USE_CHMOD=1
+FATFS._USE_EXPAND=0
+FATFS._USE_FIND=1
+FATFS._USE_FORWARD=1
+FATFS._USE_LABEL=1
 FATFS._USE_LFN=1
+FATFS._USE_MKFS=0
+FATFS._USE_STRFUNC=0
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
 FATFS0.BSP.component=
@@ -690,7 +701,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_JPEG_Init-JPEG-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_I2S2_Init-I2S2-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,12-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_JPEG_Init-JPEG-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_I2S2_Init-I2S2-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,11-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=1
