--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -528,16 +528,19 @@ PC1.GPIOParameters=GPIO_Speed
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC1.Mode=Half_Duplex_Master_Tx
 PC1.Signal=I2S2_SDO
-PC10.GPIOParameters=GPIO_Label
+PC10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC10.GPIO_Label=SDMMC_D2
+PC10.GPIO_PuPd=GPIO_PULLUP
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDMMC1_D2
-PC11.GPIOParameters=GPIO_Label
+PC11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC11.GPIO_Label=SDMMC_D3
+PC11.GPIO_PuPd=GPIO_PULLUP
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDMMC1_D3
-PC12.GPIOParameters=GPIO_Speed_High_Default,GPIO_Label,PinAttribute
+PC12.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default,GPIO_Label,PinAttribute
 PC12.GPIO_Label=SDMMC_CK
+PC12.GPIO_PuPd=GPIO_PULLUP
 PC12.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.PinAttribute=Free
@@ -565,14 +568,16 @@ PC3_C.Signal=USB_OTG_HS_ULPI_NXT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=BAT_PERC
 PC4.Signal=ADCx_INP4
-PC8.GPIOParameters=GPIO_Speed_High_Default,GPIO_Label,PinAttribute
+PC8.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default,GPIO_Label,PinAttribute
 PC8.GPIO_Label=SDMMC_D0
+PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.PinAttribute=Free
 PC8.Signal=SDMMC1_D0
-PC9.GPIOParameters=GPIO_Label
+PC9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC9.GPIO_Label=SDMMC_D1
+PC9.GPIO_PuPd=GPIO_PULLUP
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDMMC1_D1
 PD11.GPIOParameters=GPIO_Speed,GPIO_PuPd
@@ -591,8 +596,9 @@ PD15.GPIO_PuPd=GPIO_NOPULL
 PD15.Locked=true
 PD15.PinAttribute=Free
 PD15.Signal=GPIO_Input
-PD2.GPIOParameters=GPIO_Speed_High_Default,GPIO_Label,PinAttribute
+PD2.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default,GPIO_Label,PinAttribute
 PD2.GPIO_Label=SDMMC_CMD
+PD2.GPIO_PuPd=GPIO_PULLUP
 PD2.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.PinAttribute=Free
