Pin 住引脚的用途。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -467,12 +467,14 @@ PC10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC10.GPIO_Label=SDMMC_D2
 PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PC10.GPIO_PuPd=GPIO_PULLUP
+PC10.Locked=true
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDMMC1_D2
 PC11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC11.GPIO_Label=SDMMC_D3
 PC11.GPIO_Mode=GPIO_MODE_AF_PP
 PC11.GPIO_PuPd=GPIO_PULLUP
+PC11.Locked=true
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDMMC1_D3
 PC12.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default,GPIO_Label,PinAttribute,GPIO_Mode
@@ -480,6 +482,7 @@ PC12.GPIO_Label=SDMMC_CK
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
 PC12.GPIO_PuPd=GPIO_PULLUP
 PC12.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
+PC12.Locked=true
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.PinAttribute=Free
 PC12.Signal=SDMMC1_CK
@@ -511,6 +514,7 @@ PC8.GPIO_Label=SDMMC_D0
 PC8.GPIO_Mode=GPIO_MODE_AF_PP
 PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
+PC8.Locked=true
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.PinAttribute=Free
 PC8.Signal=SDMMC1_D0
@@ -518,6 +522,7 @@ PC9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC9.GPIO_Label=SDMMC_D1
 PC9.GPIO_Mode=GPIO_MODE_AF_PP
 PC9.GPIO_PuPd=GPIO_PULLUP
+PC9.Locked=true
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDMMC1_D1
 PD11.GPIOParameters=GPIO_Speed,GPIO_PuPd
@@ -541,6 +546,7 @@ PD2.GPIO_Label=SDMMC_CMD
 PD2.GPIO_Mode=GPIO_MODE_AF_PP
 PD2.GPIO_PuPd=GPIO_PULLUP
 PD2.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
+PD2.Locked=true
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.PinAttribute=Free
 PD2.Signal=SDMMC1_CMD
@@ -640,7 +646,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_JPEG_Init-JPEG-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_I2S2_Init-I2S2-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,13-MX_DMA2D_Init-DMA2D-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_I2S2_Init-I2S2-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,12-MX_DMA2D_Init-DMA2D-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=1
@@ -744,9 +750,8 @@ RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=5000000
 RCC.VCOInput3Freq_Value=5000000
 SDMMC1.ClockDiv=2
-SDMMC1.ClockPowerSave=SDMMC_CLOCK_POWER_SAVE_DISABLE
 SDMMC1.HardwareFlowControl=SDMMC_HARDWARE_FLOW_CONTROL_DISABLE
-SDMMC1.IPParameters=ClockPowerSave,HardwareFlowControl,TransceiverPresent,ClockDiv
+SDMMC1.IPParameters=ClockDiv,TransceiverPresent,HardwareFlowControl
 SDMMC1.TransceiverPresent=SDMMC_TRANSCEIVER_NOT_PRESENT
 SH.ADCx_INP4.0=ADC1_INP4,IN4-Single-Ended
 SH.ADCx_INP4.ConfNb=1
