--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -148,27 +148,6 @@ Dma.SPI2_TX.2.SyncEnable=DISABLE
 Dma.SPI2_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI2_TX.2.SyncRequestNumber=1
 Dma.SPI2_TX.2.SyncSignalID=NONE
-FATFS.IPParameters=_USE_LFN,_CODE_PAGE,_LFN_UNICODE,_FS_LOCK,_FS_EXFAT,_FS_NORTC,_NORTC_YEAR,USE_DMA_CODE_SD,_MAX_SS,_USE_FIND,_USE_EXPAND,_USE_CHMOD,_USE_LABEL,_USE_FORWARD,_FS_RPATH,_NORTC_MON,_NORTC_MDAY,_USE_STRFUNC,_USE_MKFS,_STRF_ENCODE
-FATFS.USE_DMA_CODE_SD=1
-FATFS._CODE_PAGE=437
-FATFS._FS_EXFAT=1
-FATFS._FS_LOCK=0
-FATFS._FS_NORTC=1
-FATFS._FS_RPATH=0
-FATFS._LFN_UNICODE=1
-FATFS._MAX_SS=4096
-FATFS._NORTC_MDAY=16
-FATFS._NORTC_MON=12
-FATFS._NORTC_YEAR=2025
-FATFS._STRF_ENCODE=1
-FATFS._USE_CHMOD=1
-FATFS._USE_EXPAND=0
-FATFS._USE_FIND=1
-FATFS._USE_FORWARD=1
-FATFS._USE_LABEL=1
-FATFS._USE_LFN=1
-FATFS._USE_MKFS=1
-FATFS._USE_STRFUNC=0
 File.Version=6
 GPIO.groupedBy=Show All
 I2S2.AudioFreq=I2S_AUDIOFREQ_44K
@@ -257,25 +236,25 @@ MMTAppReg8.MEMORYMAP.StartAddress=0x38800000
 MMTAppReg8.MEMORYMAP.XN=NotPermitted
 MMTAppRegionsCount=8
 MMTConfigApplied=false
+MMTSectionSuffix=
 Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=QUADSPI
-Mcu.IP11=RCC
-Mcu.IP12=SDMMC1
-Mcu.IP13=SPI1
-Mcu.IP14=SYS
-Mcu.IP15=USB_OTG_HS
+Mcu.IP10=RCC
+Mcu.IP11=SDMMC1
+Mcu.IP12=SPI1
+Mcu.IP13=SYS
+Mcu.IP14=USB_OTG_HS
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
 Mcu.IP4=DMA2D
-Mcu.IP5=FATFS
-Mcu.IP6=I2S2
-Mcu.IP7=JPEG
-Mcu.IP8=MEMORYMAP
-Mcu.IP9=NVIC
-Mcu.IPNb=16
+Mcu.IP5=I2S2
+Mcu.IP6=JPEG
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=QUADSPI
+Mcu.IPNb=15
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -326,8 +305,8 @@ Mcu.Pin49=PB5
 Mcu.Pin5=PH1-OSC_OUT (PH1)
 Mcu.Pin50=PB6
 Mcu.Pin51=VP_DMA2D_VS_DMA2D
-Mcu.Pin52=VP_FATFS_VS_SDIO
-Mcu.Pin53=VP_JPEG_VS_JPEG
+Mcu.Pin52=VP_JPEG_VS_JPEG
+Mcu.Pin53=VP_RCC_LSE
 Mcu.Pin54=VP_SYS_VS_Systick
 Mcu.Pin55=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC0
@@ -339,8 +318,8 @@ Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32H750VBTx
-MxCube.Version=6.14.1
-MxDb.Version=DB.6.0.141
+MxCube.Version=6.16.1
+MxDb.Version=DB.6.0.161
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
@@ -627,6 +606,7 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H750VBTx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
 ProjectManager.FreePins=true
+ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
@@ -646,7 +626,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_I2S2_Init-I2S2-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,12-MX_DMA2D_Init-DMA2D-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,11-MX_DMA2D_Init-DMA2D-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=1
@@ -795,12 +775,12 @@ USB_OTG_HS.VirtualMode-Device_HS=Device_HS
 USB_OTG_HS.dma_enable-Device_HS=ENABLE
 VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
 VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
-VP_FATFS_VS_SDIO.Mode=SDIO
-VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_JPEG_VS_JPEG.Mode=JPEG_Activate
 VP_JPEG_VS_JPEG.Signal=JPEG_VS_JPEG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_RCC_LSE.Mode=CRS SYNC Source LSE
+VP_RCC_LSE.Signal=RCC_LSE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
