添加硬件 CRC 模块。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -241,20 +241,21 @@ Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=RCC
-Mcu.IP11=SDMMC1
-Mcu.IP12=SPI1
-Mcu.IP13=SYS
-Mcu.IP14=USB_OTG_HS
-Mcu.IP2=DEBUG
-Mcu.IP3=DMA
-Mcu.IP4=DMA2D
-Mcu.IP5=I2S2
-Mcu.IP6=JPEG
-Mcu.IP7=MEMORYMAP
-Mcu.IP8=NVIC
-Mcu.IP9=QUADSPI
-Mcu.IPNb=15
+Mcu.IP10=QUADSPI
+Mcu.IP11=RCC
+Mcu.IP12=SDMMC1
+Mcu.IP13=SPI1
+Mcu.IP14=SYS
+Mcu.IP15=USB_OTG_HS
+Mcu.IP2=CRC
+Mcu.IP3=DEBUG
+Mcu.IP4=DMA
+Mcu.IP5=DMA2D
+Mcu.IP6=I2S2
+Mcu.IP7=JPEG
+Mcu.IP8=MEMORYMAP
+Mcu.IP9=NVIC
+Mcu.IPNb=16
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -304,9 +305,9 @@ Mcu.Pin48=PB4 (NJTRST)
 Mcu.Pin49=PB5
 Mcu.Pin5=PH1-OSC_OUT (PH1)
 Mcu.Pin50=PB6
-Mcu.Pin51=VP_DMA2D_VS_DMA2D
-Mcu.Pin52=VP_JPEG_VS_JPEG
-Mcu.Pin53=VP_RCC_LSE
+Mcu.Pin51=VP_CRC_VS_CRC
+Mcu.Pin52=VP_DMA2D_VS_DMA2D
+Mcu.Pin53=VP_JPEG_VS_JPEG
 Mcu.Pin54=VP_SYS_VS_Systick
 Mcu.Pin55=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC0
@@ -773,14 +774,14 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.0_SwParameter=DISPLAYCcBoardOoPartJjLCDJjI
 USB_OTG_HS.IPParameters=VirtualMode-Device_HS,dma_enable-Device_HS
 USB_OTG_HS.VirtualMode-Device_HS=Device_HS
 USB_OTG_HS.dma_enable-Device_HS=ENABLE
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
 VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_JPEG_VS_JPEG.Mode=JPEG_Activate
 VP_JPEG_VS_JPEG.Signal=JPEG_VS_JPEG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
-VP_RCC_LSE.Mode=CRS SYNC Source LSE
-VP_RCC_LSE.Signal=RCC_LSE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
