--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -627,7 +627,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,11-MX_DMA2D_Init-DMA2D-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,11-MX_DMA2D_Init-DMA2D-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=1
