将 USB 设备初始化为大容量存储器设备，添加 JPEG 外设，添加 JPEG 中断。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -246,7 +246,8 @@ Mcu.IP11=RCC
 Mcu.IP12=SDMMC1
 Mcu.IP13=SPI1
 Mcu.IP14=SYS
-Mcu.IP15=USB_OTG_HS
+Mcu.IP15=USB_DEVICE
+Mcu.IP16=USB_OTG_HS
 Mcu.IP2=CRC
 Mcu.IP3=DEBUG
 Mcu.IP4=DMA
@@ -255,7 +256,7 @@ Mcu.IP6=I2S2
 Mcu.IP7=JPEG
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -309,12 +310,13 @@ Mcu.Pin51=VP_CRC_VS_CRC
 Mcu.Pin52=VP_DMA2D_VS_DMA2D
 Mcu.Pin53=VP_JPEG_VS_JPEG
 Mcu.Pin54=VP_SYS_VS_Systick
-Mcu.Pin55=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin55=VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS
+Mcu.Pin56=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC0
 Mcu.Pin7=PC1
 Mcu.Pin8=PC2_C
 Mcu.Pin9=PC3_C
-Mcu.PinsNb=56
+Mcu.PinsNb=57
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -329,6 +331,7 @@ NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.JPEG_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.OTG_HS_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -627,7 +630,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,11-MX_DMA2D_Init-DMA2D-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,10-MX_DMA2D_Init-DMA2D-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=1
@@ -771,6 +774,15 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.semaphore=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=PD3
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_SwParameter=DISPLAYCcBoardOoPartJjLCDJjILI9341\:SPI;
+USB_DEVICE.CLASS_NAME_HS=MSC
+USB_DEVICE.IPParameters=VirtualMode-MSC_HS,VirtualModeHS,CLASS_NAME_HS,VID-MSC_HS,MANUFACTURER_STRING-MSC_HS,PRODUCT_STRING_MSC_HS,PID_MSC_HS,USBD_SELF_POWERED-MSC_HS
+USB_DEVICE.MANUFACTURER_STRING-MSC_HS=0xAA55 Industry
+USB_DEVICE.PID_MSC_HS=4
+USB_DEVICE.PRODUCT_STRING_MSC_HS=0xAA55 Card Reader
+USB_DEVICE.USBD_SELF_POWERED-MSC_HS=0
+USB_DEVICE.VID-MSC_HS=43605
+USB_DEVICE.VirtualMode-MSC_HS=Msc
+USB_DEVICE.VirtualModeHS=Msc_HS
 USB_OTG_HS.IPParameters=VirtualMode-Device_HS,dma_enable-Device_HS
 USB_OTG_HS.VirtualMode-Device_HS=Device_HS
 USB_OTG_HS.dma_enable-Device_HS=ENABLE
@@ -784,4 +796,6 @@ VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS.Mode=MSC_HS
+VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_MSC_HS
 board=custom
