I2S2 可以配置不保持 IO。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -155,8 +155,9 @@ File.Version=6
 GPIO.groupedBy=Show All
 I2S2.AudioFreq=I2S_AUDIOFREQ_44K
 I2S2.ErrorAudioFreq=0.03 %
-I2S2.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq,AudioFreq
+I2S2.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq,AudioFreq,MasterKeepIOState
 I2S2.Instance=SPI$Index
+I2S2.MasterKeepIOState=I2S_MASTER_KEEP_IO_STATE_DISABLE
 I2S2.RealAudioFreq=44.014 KHz
 JPEG.IPParameters=JPEG_RGB_FORMAT,USE_JPEG_ENCODER
 JPEG.JPEG_RGB_FORMAT=JPEG_RGB565
