--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -388,6 +388,7 @@ NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2D_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.JPEG_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -609,36 +610,36 @@ PD4.Locked=true
 PD4.PinAttribute=Free
 PD4.PinState=GPIO_PIN_SET
 PD4.Signal=GPIO_Output
-PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE10.GPIO_Label=ENC1_PWR_SW
-PE10.GPIO_PuPd=GPIO_NOPULL
+PE10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PE10.GPIO_Label=ENC1_SW
+PE10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE10.Locked=true
-PE10.Signal=GPIO_Input
-PE11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE10.Signal=GPXTI10
+PE11.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE11.GPIO_Label=ENC1_A
-PE11.GPIO_PuPd=GPIO_NOPULL
+PE11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE11.Locked=true
-PE11.Signal=GPIO_Input
-PE12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE11.Signal=GPXTI11
+PE12.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE12.GPIO_Label=ENC1_B
-PE12.GPIO_PuPd=GPIO_NOPULL
+PE12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE12.Locked=true
-PE12.Signal=GPIO_Input
-PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE12.Signal=GPXTI12
+PE13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE13.GPIO_Label=ENC2_SW
-PE13.GPIO_PuPd=GPIO_NOPULL
+PE13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE13.Locked=true
-PE13.Signal=GPIO_Input
-PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE13.Signal=GPXTI13
+PE14.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE14.GPIO_Label=ENC2_A
-PE14.GPIO_PuPd=GPIO_NOPULL
+PE14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE14.Locked=true
-PE14.Signal=GPIO_Input
-PE15.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE14.Signal=GPXTI14
+PE15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE15.GPIO_Label=ENC2_B
-PE15.GPIO_PuPd=GPIO_NOPULL
+PE15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE15.Locked=true
-PE15.Signal=GPIO_Input
+PE15.Signal=GPXTI15
 PE2.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PE2.GPIO_PuPd=GPIO_PULLUP
 PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -799,6 +800,18 @@ SDMMC1.IPParameters=ClockDiv,TransceiverPresent,HardwareFlowControl
 SDMMC1.TransceiverPresent=SDMMC_TRANSCEIVER_NOT_PRESENT
 SH.ADCx_INP4.0=ADC1_INP4,IN4-Single-Ended
 SH.ADCx_INP4.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=60.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
