在 STM32CubeMX 里面配置 `MX_USB_DEVICE_Init()` 不在初始化的时候被调用。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -691,7 +691,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_DMA2D_Init-DMA2D-false-HAL-true,11-SystemClock_Config-RCC-false-HAL-false,12-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,13-MX_CRC_Init-CRC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_DMA2D_Init-DMA2D-false-HAL-true,11-SystemClock_Config-RCC-false-HAL-false,12-MX_USB_DEVICE_Init-USB_DEVICE-true-HAL-false,13-MX_CRC_Init-CRC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=1
@@ -856,7 +856,8 @@ USB_DEVICE.USBD_SELF_POWERED-MSC_HS=0
 USB_DEVICE.VID-MSC_HS=43605
 USB_DEVICE.VirtualMode-MSC_HS=Msc
 USB_DEVICE.VirtualModeHS=Msc_HS
-USB_OTG_HS.IPParameters=VirtualMode-Device_HS,dma_enable-Device_HS
+USB_OTG_HS.IPParameters=VirtualMode-Device_HS,dma_enable-Device_HS,Sof_enable-Device_HS
+USB_OTG_HS.Sof_enable-Device_HS=DISABLE
 USB_OTG_HS.VirtualMode-Device_HS=Device_HS
 USB_OTG_HS.dma_enable-Device_HS=ENABLE
 VP_CRC_VS_CRC.Mode=CRC_Activate
