--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -715,29 +715,31 @@ RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=480000000
+RCC.DFSDMACLkFreq_Value=120000000
 RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=5
 RCC.DIVM2=5
 RCC.DIVM3=5
 RCC.DIVN1=192
 RCC.DIVN2=80
-RCC.DIVN3=96
+RCC.DIVN3=128
 RCC.DIVP1Freq_Value=480000000
 RCC.DIVP2=4
 RCC.DIVP2Freq_Value=100000000
-RCC.DIVP3=4
-RCC.DIVP3Freq_Value=120000000
-RCC.DIVQ1Freq_Value=480000000
+RCC.DIVP3=5
+RCC.DIVP3Freq_Value=128000000
+RCC.DIVQ1=8
+RCC.DIVQ1Freq_Value=120000000
 RCC.DIVQ2=4
 RCC.DIVQ2Freq_Value=100000000
-RCC.DIVQ3=8
-RCC.DIVQ3Freq_Value=60000000
+RCC.DIVQ3=10
+RCC.DIVQ3Freq_Value=64000000
 RCC.DIVR1Freq_Value=480000000
 RCC.DIVR2Freq_Value=200000000
-RCC.DIVR3Freq_Value=240000000
+RCC.DIVR3=5
+RCC.DIVR3Freq_Value=128000000
 RCC.EnbaleCSS=true
-RCC.FDCANFreq_Value=480000000
+RCC.FDCANFreq_Value=120000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=240000000
@@ -747,13 +749,13 @@ RCC.HRTIMFreq_Value=240000000
 RCC.HSE_VALUE=25000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,EnbaleCSS,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1CLockSelection,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6CLockSelection,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,EnbaleCSS,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1CLockSelection,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6CLockSelection,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
 RCC.LPUART1CLockSelection=RCC_LPUART1CLKSOURCE_PLL3
-RCC.LPUART1Freq_Value=60000000
-RCC.LTDCFreq_Value=240000000
+RCC.LPUART1Freq_Value=64000000
+RCC.LTDCFreq_Value=128000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=480000000
 RCC.PLL1_VCI_Range-AdvancedSettings=RCC_PLL1VCIRANGE_1
@@ -766,14 +768,13 @@ RCC.QSPICLockSelection=RCC_QSPICLKSOURCE_PLL2
 RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=480000000
-RCC.SAI23Freq_Value=480000000
-RCC.SAI4AFreq_Value=480000000
-RCC.SAI4BFreq_Value=480000000
+RCC.SAI1Freq_Value=120000000
+RCC.SAI23Freq_Value=120000000
+RCC.SAI4AFreq_Value=120000000
+RCC.SAI4BFreq_Value=120000000
 RCC.SDMMC1CLockSelection=RCC_SDMMCCLKSOURCE_PLL2
 RCC.SDMMCFreq_Value=200000000
-RCC.SPDIFRXFreq_Value=480000000
-RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL3
+RCC.SPDIFRXFreq_Value=120000000
 RCC.SPI123Freq_Value=120000000
 RCC.SPI45Freq_Value=120000000
 RCC.SPI6CLockSelection=RCC_SPI6CLKSOURCE_PLL2
@@ -787,10 +788,10 @@ RCC.TraceFreq_Value=480000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
 RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
-RCC.USBFreq_Value=60000000
+RCC.USBFreq_Value=64000000
 RCC.VCO1OutputFreq_Value=960000000
 RCC.VCO2OutputFreq_Value=400000000
-RCC.VCO3OutputFreq_Value=480000000
+RCC.VCO3OutputFreq_Value=640000000
 RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=5000000
 RCC.VCOInput3Freq_Value=5000000
