--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -691,7 +691,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_DMA2D_Init-DMA2D-false-HAL-true,11-SystemClock_Config-RCC-false-HAL-false,12-MX_USB_DEVICE_Init-USB_DEVICE-true-HAL-false,13-MX_CRC_Init-CRC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_JPEG_Init-JPEG-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_DMA2D_Init-DMA2D-false-HAL-true,11-SystemClock_Config-RCC-false-HAL-true,12-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,13-MX_CRC_Init-CRC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=1
@@ -849,12 +849,11 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=PD3
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_SwParameter=DISPLAYCcBoardOoPartJjLCDJjILI9341\:SPI;
 USB_DEVICE.CLASS_NAME_HS=MSC
-USB_DEVICE.IPParameters=VirtualMode-MSC_HS,VirtualModeHS,CLASS_NAME_HS,VID-MSC_HS,MANUFACTURER_STRING-MSC_HS,PRODUCT_STRING_MSC_HS,PID_MSC_HS,USBD_SELF_POWERED-MSC_HS
+USB_DEVICE.IPParameters=VirtualModeHS,CLASS_NAME_HS,VirtualMode-MSC_HS,MANUFACTURER_STRING-MSC_HS,VID-MSC_HS,PID_MSC_HS,PRODUCT_STRING_MSC_HS
 USB_DEVICE.MANUFACTURER_STRING-MSC_HS=0xAA55 Industry
-USB_DEVICE.PID_MSC_HS=4
-USB_DEVICE.PRODUCT_STRING_MSC_HS=0xAA55 Card Reader
-USB_DEVICE.USBD_SELF_POWERED-MSC_HS=0
-USB_DEVICE.VID-MSC_HS=43605
+USB_DEVICE.PID_MSC_HS=5
+USB_DEVICE.PRODUCT_STRING_MSC_HS=retro-tv card reader
+USB_DEVICE.VID-MSC_HS=0xAA55
 USB_DEVICE.VirtualMode-MSC_HS=Msc
 USB_DEVICE.VirtualModeHS=Msc_HS
 USB_OTG_HS.IPParameters=VirtualMode-Device_HS,dma_enable-Device_HS,Sof_enable-Device_HS
