--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -849,8 +849,9 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=PD3
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_SwParameter=DISPLAYCcBoardOoPartJjLCDJjILI9341\:SPI;
 USB_DEVICE.CLASS_NAME_HS=MSC
-USB_DEVICE.IPParameters=VirtualModeHS,CLASS_NAME_HS,VirtualMode-MSC_HS,MANUFACTURER_STRING-MSC_HS,VID-MSC_HS,PID_MSC_HS,PRODUCT_STRING_MSC_HS
+USB_DEVICE.IPParameters=VirtualModeHS,CLASS_NAME_HS,VirtualMode-MSC_HS,MANUFACTURER_STRING-MSC_HS,VID-MSC_HS,PID_MSC_HS,PRODUCT_STRING_MSC_HS,MSC_MEDIA_PACKET-MSC_HS
 USB_DEVICE.MANUFACTURER_STRING-MSC_HS=0xAA55 Industry
+USB_DEVICE.MSC_MEDIA_PACKET-MSC_HS=4096
 USB_DEVICE.PID_MSC_HS=5
 USB_DEVICE.PRODUCT_STRING_MSC_HS=retro-tv card reader
 USB_DEVICE.VID-MSC_HS=0xAA55
